@@ -48,3 +48,4 @@ S3method(plot, bmdboot)
 export(ecdfplotwithCI)
 export(curvesplot)
 export(bmdplotwithgradient)
+export(ecdfquantileplot)
